--- a/client/templates/edit_questionnaire.html
+++ b/client/templates/edit_questionnaire.html
@@ -11,6 +11,7 @@
 
     <div class="content">
         <div class="top-bar">
+            <a href="{% url 'view_questionnaire' questionnaire.id %}" class="btn back-btn">← Back</a>
             <h1>Edit Questionnaire</h1>
             <button type="submit" form="edit-form" class="btn save-btn">Save Changes</button>
         </div>
