--- a/client/templates/view_responders.html
+++ b/client/templates/view_responders.html
@@ -10,6 +10,7 @@
 <body>
     <div class="content">
         <div class="top-bar">
+            <a href="{% url 'manage_questionnaires' %}" class="btn back-btn">← Back</a>
             <h1>Responders - {{ questionnaire.title }}</h1>
         </div>
 
