--- a/client/static/css/view_questionnaire.css
+++ b/client/static/css/view_questionnaire.css
@@ -24,8 +24,8 @@ body {
 
 /* Edit Button */
 .edit-btn {
-    background-color: white;
-    color: #f39c12;
+    background-color: #f39c12;
+    color: white;
     padding: 10px 15px;
     text-decoration: none;
     font-size: 16px;
@@ -36,7 +36,7 @@ body {
 }
 
 .edit-btn:hover {
-    background: rgba(0, 0, 0, 0.1);
+    /* background: rgba(0, 0, 0, 0.1); */
     transform: scale(1.05);
 }
 
@@ -89,4 +89,21 @@ body {
     font-size: 16px;
     font-weight: bold;
     color: #555;
+}
+.back-btn {
+    background-color: #F24505;
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+}
+
+.back-btn:hover {
+    background: #F24505; /* Darker grey on hover */
+    transform: scale(1.05);
 }
