--- a/client/static/css/view_responders.css
+++ b/client/static/css/view_responders.css
@@ -17,7 +17,7 @@ body {
 .top-bar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: stretch;
     margin-bottom: 20px;
     color: #F24505;
 }
@@ -90,7 +90,23 @@ body {
     width: 100%;
     margin-top: 20px;
 }
+.back-btn {
+    background-color: #F24505; 
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+}
 
+.back-btn:hover {
+    background: #F24505;
+    transform: scale(1.05);
+}
 /* Responsive Design */
 @media (max-width: 1024px) {
     .card-container {
