--- a/client/templates/Manage_Questionnaires.html
+++ b/client/templates/Manage_Questionnaires.html
@@ -12,6 +12,7 @@
     <div class="content">
         <div class="top-bar">
             <h1>Manage Questionnaires</h1>
+            <a href="{% url 'create_questionnaire' %}" class="btn create-btn">+ Create Questionnaire</a>
         </div>
 
         <div class="card-container">
@@ -38,7 +39,6 @@
                         </td>
                         <td>
                             <a href="{% url 'view_questionnaire' questionnaire.id %}" class="btn view-btn">View</a>
-                            <a href="{% url 'edit_questionnaire' questionnaire.id %}" class="btn edit-btn">Edit</a>
                             {% if not questionnaire.is_active %}
                             <a href="{% url 'activate_questionnaire' questionnaire.id %}" class="btn activate-btn">Activate</a>
                             {% endif %}
