Added delete functionality

--- a/client/static/css/Manage_Questionnaires.css
+++ b/client/static/css/Manage_Questionnaires.css
@@ -149,3 +149,9 @@ body {
 .create-btn:hover {
     background: #d63008;
 }
+
+.center-text {
+    text-align: center; 
+    vertical-align: middle; 
+    font-weight: bold; /* Makes the number stand out */
+}
