--- a/client/static/css/view_questionnaire.css
+++ b/client/static/css/view_questionnaire.css
@@ -40,6 +40,23 @@ body {
     transform: scale(1.05);
 }
 
+.delete-btn {
+    background-color: red;
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    border: 2px solid red;
+    border-radius: 20px;
+    transition: background 0.3s, transform 0.2s;
+}
+
+.delete-btn:hover {
+    /* background: rgba(0, 0, 0, 0.1); */
+    transform: scale(1.05);
+}
+
 /* Description Box */
 .description-box {
     background: #FCEFEA;
@@ -106,4 +123,9 @@ body {
 .back-btn:hover {
     background: #F24505; /* Darker grey on hover */
     transform: scale(1.05);
+}
+.action-buttons {
+    display: flex;
+    gap: 10px; /* Adds space between the buttons */
+    align-items: center; /* Aligns buttons vertically */
 }
