--- a/client/templates/view_questionnaire.html
+++ b/client/templates/view_questionnaire.html
@@ -13,8 +13,13 @@
         <div class="top-bar">
             <a href="{% url 'manage_questionnaires' %}" class="btn back-btn">← Back</a>
             <h1>{{ questionnaire.title }}</h1>
-            <a href="{% url 'edit_questionnaire' questionnaire.id %}" class="btn edit-btn">Edit</a>
+            <div class="action-buttons">
+                <a href="{% url 'edit_questionnaire' questionnaire.id %}" class="edit-btn">Edit</a>
+                <a href="{% url 'delete_questionnaire' questionnaire.id %}" class="delete-btn">Delete</a>
+            </div>
         </div>
+
+       
 
         <!-- Questionnaire Description -->
         <div class="description-box">
