last version of user responce

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -4,6 +4,10 @@
     {% load static %}  
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    </head>
+    
     <!-- Link to your CSS file -->
     <link rel="stylesheet" href="{% static 'users/css/navbar.css' %}">
 
