--- a/users/templates/users/partials/navbar.html
+++ b/users/templates/users/partials/navbar.html
@@ -45,7 +45,7 @@
     </ul>
 
     <div class="toggle">
-        <img src="{% static 'img/toggle.svg' %}" alt="Toggle Menu" class="toggleIcon">
+        <img src="{% static 'users/img/toggle.svg' %}" alt="Toggle Menu" class="toggleIcon">
     </div>
 
 </div>
