--- a/client/templates/client/userStatistics.html
+++ b/client/templates/client/userStatistics.html
@@ -1,4 +1,4 @@
-{% extends 'client/base.html' %}
+{% extends 'client/client_base.html' %}
 {% load static %}
 
 {% block extra_css %}
@@ -23,6 +23,7 @@
 {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'client/css/reports.css' %}">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <div class="content">
         <h2>User Statistics Overview</h2>
